syntax = "proto3";

package protos;

import "google/api/annotations.proto";

service Category {
    rpc GetCategoryInfo (CQueryRequest) returns (CategoryInfo) {
        option (google.api.http).get = "/v1/category/info/{cat_id}";
    }
    rpc GetCategoryList (CQueryRequest) returns (CategoryList) {
        option (google.api.http).get = "/v1/category/list";
    }
}

message CQueryRequest {
    int64 cat_id = 1;
    int64 limit = 2;
    int64 page = 3;
}

message CategoryInfo {
    int64 cat_id = 1;
    string title = 2;
    int64 parent_id = 3;
    int64 sort = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CategoryList {
    repeated CategoryInfo data = 1;
}